--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <img src="images/image-qr-code.png" alt="qr-code">
-        <h1>Improve your frontend skills with frontend master</h1>
+        <h1>Improve your frontend skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
 </body>
