--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ChuksCraft</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
+   <div class="container1">
     <div class="container">
         <img src="images/image-qr-code.png" alt="qr-code">
         <h1>Improve your frontend skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
     </div>
 </body>
 </html>
